[tool.poetry]
name = "robotframework-slack"
version = "0.1.1-alpha"
description = ""
authors = ["vinitrindade88 <vinicius.trindade@diagroup.com>"]
readme = "README.md"
packages = [
    {include = "RobotSlackNotification"}
]

[tool.poetry.dependencies]
python = "^3.9"
slack-sdk = "^3.21.2"
robotframework = "^5.0.1"
slackclient = "^2.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
